# crayfis-corsika

./: .gitignore  README.md  build.sh
src/: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG  CMakeLists.txt  COLLABORATION_AGREEMENT.md  CONTRIBUTING.md  LICENSE  MCNET_GUIDELINES  README.md  SCIENTIFIC_AUTHORS  corsika.dox  do-clang-format.py  do-copyright.py
src/CMakeModules/: CorsikaUtilities.cmake  FindPythia8.cmake
src/COAST/: CMakeLists.txt  COASTProcess.cc  COASTProcess.h  COASTStack.h  COASTUserLib.cc  ParticleConversion.cc  ParticleConversion.h  README.md
src/Documentation/: CMakeLists.txt
src/Documentation/Doxygen/: CMakeLists.txt  Doxyfile.in
src/Documentation/Examples/: CMakeLists.txt  boundary_example.cc  cascade_example.cc  cascade_proton_example.cc  geometry_example.cc  helix_example.cc  logger_example.cc  stack_example.cc  staticsequence_example.cc  stopping_power.cc  vertical_EAS.cc
src/Environment/: BaseExponential.h  CMakeLists.txt  DensityFunction.h  Environment.h  FlatExponential.h  HomogeneousMedium.h  IMediumModel.h  InhomogeneousMedium.h  LinearApproximationIntegrator.h  NameModel.h  NuclearComposition.h  SlidingPlanarExponential.h  VolumeTreeNode.h  testEnvironment.cc
src/Framework/: CMakeLists.txt
src/Framework/Cascade/: CMakeLists.txt  Cascade.dox  Cascade.h  testCascade.cc  testCascade.h
src/Framework/Geometry/: BaseTrajectory.h  BaseVector.h  CMakeLists.txt  CoordinateSystem.cc  CoordinateSystem.h  FourVector.h  Helix.h  Line.h  Plane.h  Point.h  QuantityVector.h  RootCoordinateSystem.h  Sphere.h  Trajectory.h  Vector.h  Volume.h  testFourVector.cc  testGeometry.cc
src/Framework/Logging/: BufferedSink.h  CMakeLists.txt  Logger.h  MessageOff.h  MessageOn.h  NoSink.h  Sink.h  testLogging.cc
src/Framework/Particles/: CMakeLists.txt  NuclearData.xml  ParticleClassNames.xml  ParticleData.xml  ParticleProperties.cc  ParticleProperties.h  particles.dox  pdxml_reader.py  testParticles.cc
src/Framework/ProcessSequence/: BaseProcess.h  BoundaryCrossingProcess.h  CMakeLists.txt  ContinuousProcess.h  DecayProcess.h  InteractionProcess.h  ProcessReturn.h  ProcessSequence.h  ProcessSignature.h  SecondariesProcess.h  StackProcess.h  testProcessSequence.cc
src/Framework/Random/: CMakeLists.txt  ExponentialDistribution.h  RNGManager.cc  RNGManager.h  UniformRealDistribution.h  testRandom.cc
src/Framework/StackInterface/: CMakeLists.txt  CombinedStack.h  ParticleBase.h  SecondaryView.h  Stack.dox  Stack.h  StackIteratorInterface.h  comp  testCombinedStack.cc  testSecondaryView.cc  testStackInterface.cc  testTestStack.h
src/Framework/Testing/: CMakeLists.txt  TestMain.cc
src/Framework/Units/: CMakeLists.txt  PhysicalConstants.h  PhysicalUnits.h  testUnits.cc
src/Framework/Utilities/: Bit.h  CMakeLists.txt  COMBoost.cc  COMBoost.h  CorsikaFenv.h  CorsikaFenvDefault.cc  CorsikaFenvFallback.cc  CorsikaFenvOSX.cc  MetaProgramming.h  Singleton.h  sgn.h  testCOMBoost.cc  testCorsikaFenv.cc  try_feenableexcept.cc
src/Main/: CMakeLists.txt  main.cc  main.h
src/Main/Utils/: CMakeLists.txt  Scenario.cc  Scenario.h  input.cc  input.h  options.h
src/Main/_demo/: shower.cc
src/Processes/: CMakeLists.txt
src/Processes/EnergyLoss/: CMakeLists.txt  EnergyLoss.cc  EnergyLoss.h  ReadData.py
src/Processes/HadronicElasticModel/: CMakeLists.txt  HadronicElasticModel.cc  HadronicElasticModel.h
src/Processes/NullModel/: CMakeLists.txt  NullModel.cc  NullModel.h  testNullModel.cc
src/Processes/ObservationPlane/: CMakeLists.txt  ObservationPlane.cc  ObservationPlane.h  testObservationPlane.cc
src/Processes/ParticleCut/: CMakeLists.txt  ParticleCut.cc  ParticleCut.h  testParticleCut.cc
src/Processes/Pythia/: CMakeLists.txt  Decay.cc  Decay.h  Interaction.cc  Interaction.h  Random.cc  Random.h  testPythia.cc
src/Processes/Sibyll/: CMakeLists.txt  Decay.cc  Decay.h  Interaction.cc  Interaction.h  NuclearInteraction.cc  NuclearInteraction.h  ParticleConversion.cc  ParticleConversion.h  SibStack.h  code_generator.py  gasdev.f  nuclib.f  nuclib.h  sibyll2.3c.cc  sibyll2.3c.f  sibyll2.3c.h  signuc.f  testSibyll.cc
src/Processes/StackInspector/: CMakeLists.txt  StackInspector.cc  StackInspector.h  testStackInspector.cc
src/Processes/SwitchProcess/: CMakeLists.txt  SwitchProcess.h  testSwitchProcess.cc
src/Processes/TrackWriter/: CMakeLists.txt  TrackWriter.cc  TrackWriter.h
src/Processes/TrackingLine/: CMakeLists.txt  TrackingLine.cc  TrackingLine.h  testTrackingLine.cc  testTrackingLineStack.h
src/Processes/UrQMD/: CMakeLists.txt  Copyright  README  UrQMD.cc  UrQMD.h  init.f  ityp2pdg.f  tabinit.f  testUrQMD.cc  urqmd.f  urqmdInterface.F
src/Setup/: CMakeLists.txt  SetupEnvironment.h  SetupLogger.h  SetupStack.h  SetupTrajectory.h
src/Stack/: CMakeLists.txt
src/Stack/DummyStack/: CMakeLists.txt  DummyStack.h
src/Stack/NuclearStackExtension/: CMakeLists.txt  NuclearStackExtension.h  testNuclearStackExtension.cc
src/Stack/SuperStupidStack/: CMakeLists.txt  SuperStupidStack.h  testSuperStupidStack.cc
src/Tools/: CMakeLists.txt  plot_crossings.sh  plot_tracks.sh
src/nuc/: Makefile_ifc  input04.f  main04.f
